--- a/style.css
+++ b/style.css
@@ -13,9 +13,14 @@ body{
 
 header{
     background-color: #878E88;
-    color: #fff;
+    color: white;
+    margin: 0px;
     text-align: center;
-    padding: 20px;
+    padding: 50px;
+}
+
+.headtxt{
+    font-size: 50px;
 }
 
 nav{
@@ -40,46 +45,92 @@ main{
     padding: 10px;
 }
 
-h1{
-    display: flex;
-}
+
 
 h2{
     display: flex;
 }
 
 .card {
-    background-color: #fff;
-    padding: 100px;
+    padding: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 200px;
     margin-right: 200px;
     border-radius: 50px;
+    background: linear-gradient(to bottom,#fff,#E3FBDB);
 }
 
-.inf{
+.card::after{
     width: 100%;
-    padding: 5px;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    padding-top: 10px;
+    height: 100%;
 }
 
 .inf{
-    display: flex;
+    margin-top: 20px;
+    background-color: #eee;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 20px;
+    width: 750px;
+    margin-left: 20px;
+}
+
+.inf50{
+    height: 100%;
+    background-color: #96C0B7;
+    width: 50%;
+}
+
+.inf20{
+    height: 100%;
+    background-color: #96C0B7;
+    width: 20%;
+}
+
+.inf50{
+    height: 100%;
+    background-color: #96C0B7;
+    width: 50%;
+}
+
+.inf100{
+    height: 100%;
+    background-color: #96C0B7;
+    width: 100%;
 }
 
 .headpho{
-    width: 30%;
+    width: 20%;
     margin-left: 0px;
     margin-right: 30px;
     float: left;
 }
 
+.slo{
+    font-family: 標楷體;
+    margin-top: 50px;
+    font-weight: bold;
+    font-size: 50px;
+    text-align: center;
+}
+
+.hkpho{
+    width: 30%;
+    position: relative;
+    display: flex;
+}
+
+.ig{
+    width: 100px;
+    border-radius: 50%;
+}
+
+.con{
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+}
 
 footer {
     background-color: #96C0B7;
