--- a/style.css
+++ b/style.css
@@ -40,15 +40,18 @@ nav a:hover {
     color: white;
 }
 
-
 main{
     padding: 10px;
 }
 
-
-
 h2{
     display: flex;
+    margin-left: 50px;
+}
+
+p{
+    position: relative;
+    margin-left: 50px;
 }
 
 .card {
@@ -88,10 +91,10 @@ h2{
     width: 20%;
 }
 
-.inf50{
+.inf30{
     height: 100%;
     background-color: #96C0B7;
-    width: 50%;
+    width: 30%;
 }
 
 .inf100{
@@ -102,7 +105,6 @@ h2{
 
 .headpho{
     width: 20%;
-    margin-left: 0px;
     margin-right: 30px;
     float: left;
 }
@@ -116,9 +118,16 @@ h2{
 }
 
 .hkpho{
-    width: 30%;
     position: relative;
     display: flex;
+    margin: 20px;
+}
+
+.hkphole{
+    position: relative;
+    display: flex;
+    margin: 20px;
+    float: right;
 }
 
 .ig{
